# motiondetector

./: .gitignore  CMakeLists.txt  LICENSE
scripts/: build.sh  opencv_dependencies.sh  opencv_install.sh  run.sh
src/: AnalyticsProvider.h  main.cpp
